fix about the db throttle limit
